@@ -46,10 +46,16 @@
 int log_start(CableHandle *h)
 {
 	log_hex_start();
+
 	if(h->model == CABLE_USB)
+	{
 		log_dusb_start();
+		log_nsp_start();
+	}
 	if(h->model != CABLE_USB)
+	{
 		log_dbus_start();
+	}
 
   	return 0;
 }
@@ -57,10 +63,16 @@ int log_start(CableHandle *h)
 int log_1(CableHandle *h, int dir, uint8_t data)
 {
 	log_hex_1(dir, data);
+
 	if(h->model == CABLE_USB)
+	{
 		log_dusb_1(dir, data);
+		log_nsp_1(dir, data);
+	}
 	if(h->model != CABLE_USB)
+	{
 		log_dbus_1(dir, data);
+	}
 
   	return 0;
 }
@@ -76,6 +88,7 @@ int log_N(CableHandle *h, int dir, uint8_t *data, int len)
 		log_hex_1(dir, data[i]);
 		log_dusb_1(dir, data[i]);
 		log_dbus_1(dir, data[i]);
+		log_nsp_1(dir, data[i]);
 	}
   	
   	return 0;
@@ -84,10 +97,16 @@ int log_N(CableHandle *h, int dir, uint8_t *data, int len)
 int log_stop(CableHandle *h)
 {
 	log_hex_stop();
+
 	if(h->model == CABLE_USB)
+	{
 		log_dusb_stop();
+		log_nsp_stop();
+	}
 	if(h->model != CABLE_USB)
+	{
 		log_dbus_stop();
+	}
 
   	return 0;
 }
