@@ -89,7 +89,7 @@ static const Opcode opcodes[] =
 
 /* */
 
-int is_a_packet(uint8_t id)
+static int is_a_packet(uint8_t id)
 {
   int i;
   
@@ -99,7 +99,7 @@ int is_a_packet(uint8_t id)
   return i;
 }
 
-const char* name_of_packet(uint8_t id)
+static const char* name_of_packet(uint8_t id)
 {
 	int i;
   
@@ -109,7 +109,7 @@ const char* name_of_packet(uint8_t id)
 	return "";
 }
 
-int is_a_packet_with_data_header(uint8_t id)
+static int is_a_packet_with_data_header(uint8_t id)
 {
 	int i;
   
@@ -121,7 +121,7 @@ int is_a_packet_with_data_header(uint8_t id)
   return 0;
 }
 
-int is_a_opcode(uint16_t id)
+static int is_a_opcode(uint16_t id)
 {
   int i;
 
@@ -132,7 +132,7 @@ int is_a_opcode(uint16_t id)
   return i;
 }
 
-const char* name_of_data(uint16_t id)
+static const char* name_of_data(uint16_t id)
 {
 	int i;
   
@@ -143,7 +143,7 @@ const char* name_of_data(uint16_t id)
 	return "unknown";
 }
 
-const char* ep_way(int ep)
+static const char* ep_way(int ep)
 {
 	if(ep == 0x01) return "TI>PC";
 	else if(ep == 0x02) return "PC>TI";
@@ -152,7 +152,7 @@ const char* ep_way(int ep)
 
 /* */
 
-int add_pkt_type(uint8_t* array, uint8_t type, int *count)
+static int add_pkt_type(uint8_t* array, uint8_t type, int *count)
 {
 	int i;
 	
@@ -166,7 +166,7 @@ int add_pkt_type(uint8_t* array, uint8_t type, int *count)
 	return i;
 }
 
-int add_data_code(uint16_t* array, uint16_t code, int *count)
+static int add_data_code(uint16_t* array, uint16_t code, int *count)
 {
 	int i;
 	
@@ -185,7 +185,7 @@ int add_data_code(uint16_t* array, uint16_t code, int *count)
 static FILE *hex = NULL;
 static FILE *log = NULL;
 
-int hex_read(unsigned char *data)
+static int hex_read(unsigned char *data)
 {
 	static int idx = 0;
 	int ret;
@@ -211,11 +211,11 @@ int hex_read(unsigned char *data)
 	return 0;
 }
 
-uint8_t pkt_type_found[256] = { 0 };
-uint16_t data_code_found[256] = { 0 };
-int ptf=0, dcf=0;
+static uint8_t pkt_type_found[256] = { 0 };
+static uint16_t data_code_found[256] = { 0 };
+static int ptf=0, dcf=0;
 
-int dusb_write(int dir, uint8_t data)
+static int dusb_write(int dir, uint8_t data)
 {
 	static int array[20];
   	static int i = 0;
