@@ -7,6 +7,9 @@ Log:
 		had been removed from slv_reset.
 	- don't reset cable at opening stage (need to be eventually managed by program)
 	- removed use of reset_ep which (deprecated) and use of usb_reset (handle is no longer valid)
+	- added NSpire packet decompiler
+
+	- move logging code to a subfolder...
 
 - 03/10/2007, version 1.1.1: roms
 	- renamed link_slv into link_usb
